tests/invalid/dict_subscript_index_wrong_key_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    x: int = d["1"]
    print(x)


if __name__ == "__main__":
    run_case()
